--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
-name=LC_bmpObj
-version=1.0.1
+name=LC_bmpTools
+version=1.0.2
 author=jim lee
-maintainer=bmpObj@leftcoast.biz
+maintainer=bmpTools@leftcoast.biz
 sentence=extend the Left Coast GUI to work with .bmp files.
 paragraph=Icons, pictures, for Arduino displays along with reading and writing .bmp files.
 category=Graphics
-url=https://github.com/leftCoast/LC_bmpObj
+url=https://github.com/leftCoast/LC_bmpTools
 architectures=*
 depends=LC_baseTools,LC_GUITools,LC_SDTools,LC_docTools
 dot_a_linkage=true
